# gcflobdd

./: CLAUDE.md  Cargo.toml  build.rs  cbindgen.toml
examples/cpp/: smoke.cpp
include/: gcflobdd.h
src/: ffi.rs  lib.rs
src/gcflobdd/: connection.rs  context.rs  mod.rs  node.rs  return_map.rs  tests.rs  top_node.rs
src/gcflobdd/bdd/: connection.rs  mod.rs  node.rs  tests.rs
src/gcflobdd/complex/: mod.rs
src/gcflobdd/soa/: mod.rs
src/grammar/: mod.rs
src/sync/utils/: hash_cache.rs
src/utils/: hash_cache.rs  mod.rs
tests/: n_queens.rs  xor.rs
